; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos5433_drm_decon.c_decon_setup_trigger.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos5433_drm_decon.c_decon_setup_trigger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.decon_context = type { i32, i32, i32, i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@I80_HW_TRG = common dso_local global i32 0, align 4
@TRIGCON_TRIGEN_PER_F = common dso_local global i32 0, align 4
@TRIGCON_TRIGEN_F = common dso_local global i32 0, align 4
@TRIGCON_TE_AUTO_MASK = common dso_local global i32 0, align 4
@TRIGCON_SWTRIGEN = common dso_local global i32 0, align 4
@DECON_TRIGCON = common dso_local global i64 0, align 8
@TRIGCON_HWTRIGMASK = common dso_local global i32 0, align 4
@TRIGCON_HWTRIGEN = common dso_local global i32 0, align 4
@DSD_CFG_MUX = common dso_local global i32 0, align 4
@DSD_CFG_MUX_TE_UNMASK_GLOBAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Cannot update sysreg.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.decon_context*)* @decon_setup_trigger to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decon_setup_trigger(%struct.decon_context* %0) #0 {
  %2 = alloca %struct.decon_context*, align 8
  store %struct.decon_context* %0, %struct.decon_context** %2, align 8
  %3 = load %struct.decon_context*, %struct.decon_context** %2, align 8
  %4 = getelementptr inbounds %struct.decon_context, %struct.decon_context* %3, i32 0, i32 4
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %17, label %9

9:                                                ; preds = %1
  %10 = load %struct.decon_context*, %struct.decon_context** %2, align 8
  %11 = getelementptr inbounds %struct.decon_context, %struct.decon_context* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* @I80_HW_TRG, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %9
  br label %64

17:                                               ; preds = %9, %1
  %18 = load %struct.decon_context*, %struct.decon_context** %2, align 8
  %19 = getelementptr inbounds %struct.decon_context, %struct.decon_context* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = load i32, i32* @I80_HW_TRG, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %38, label %24

24:                                               ; preds = %17
  %25 = load i32, i32* @TRIGCON_TRIGEN_PER_F, align 4
  %26 = load i32, i32* @TRIGCON_TRIGEN_F, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* @TRIGCON_TE_AUTO_MASK, align 4
  %29 = or i32 %27, %28
  %30 = load i32, i32* @TRIGCON_SWTRIGEN, align 4
  %31 = or i32 %29, %30
  %32 = load %struct.decon_context*, %struct.decon_context** %2, align 8
  %33 = getelementptr inbounds %struct.decon_context, %struct.decon_context* %32, i32 0, i32 3
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* @DECON_TRIGCON, align 8
  %36 = add nsw i64 %34, %35
  %37 = call i32 @writel(i32 %31, i64 %36)
  br label %64

38:                                               ; preds = %17
  %39 = load i32, i32* @TRIGCON_TRIGEN_PER_F, align 4
  %40 = load i32, i32* @TRIGCON_TRIGEN_F, align 4
  %41 = or i32 %39, %40
  %42 = load i32, i32* @TRIGCON_HWTRIGMASK, align 4
  %43 = or i32 %41, %42
  %44 = load i32, i32* @TRIGCON_HWTRIGEN, align 4
  %45 = or i32 %43, %44
  %46 = load %struct.decon_context*, %struct.decon_context** %2, align 8
  %47 = getelementptr inbounds %struct.decon_context, %struct.decon_context* %46, i32 0, i32 3
  %48 = load i64, i64* %47, align 8
  %49 = load i64, i64* @DECON_TRIGCON, align 8
  %50 = add nsw i64 %48, %49
  %51 = call i32 @writel(i32 %45, i64 %50)
  %52 = load %struct.decon_context*, %struct.decon_context** %2, align 8
  %53 = getelementptr inbounds %struct.decon_context, %struct.decon_context* %52, i32 0, i32 2
  %54 = load i32, i32* %53, align 8
  %55 = load i32, i32* @DSD_CFG_MUX, align 4
  %56 = load i32, i32* @DSD_CFG_MUX_TE_UNMASK_GLOBAL, align 4
  %57 = call i64 @regmap_update_bits(i32 %54, i32 %55, i32 %56, i32 -1)
  %58 = icmp ne i64 %57, 0
  br i1 %58, label %59, label %64

59:                                               ; preds = %38
  %60 = load %struct.decon_context*, %struct.decon_context** %2, align 8
  %61 = getelementptr inbounds %struct.decon_context, %struct.decon_context* %60, i32 0, i32 1
  %62 = load i32, i32* %61, align 4
  %63 = call i32 @DRM_DEV_ERROR(i32 %62, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %64

64:                                               ; preds = %16, %24, %59, %38
  ret void
}

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i64 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @DRM_DEV_ERROR(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
